--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     position: relative;
     font-size: 10px;
     box-sizing: border-box;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -14,7 +17,7 @@ header {
     padding: 0 5%;
     background-color: aliceblue;
     z-index: 99;
-    margin-top: -50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.20);
 }
 
 #menu_control {
@@ -204,11 +207,45 @@ nav ul li a:hover {
 
 .footer {
     width: 100%;
-    height: 150px;
     background-color: #29C8FF;
     color: aliceblue;
     font-size: 12px;
+    padding-top: 20px;
+    margin-top: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.20);
 }
+.footer_img{
+    background-image: url(img/toby5-horizon-white.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 7.5rem;
+    height: 3.6rem;
+    margin: auto;
+    margin-bottom: 1.5rem;
+}
+.footer_menu{
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+.footer_menu ul{
+    display: flex;
+    width: 80%;
+    height: 100%;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+.footer_menu ul a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+.copyright{
+ font-weight: 200;
+ font-size: 0.6rem;
+ text-align: right;
+}
+
 
 .article_block {
     background-color: #fff;
@@ -234,7 +271,7 @@ nav ul li a:hover {
     height: auto;
     background-color: rgba(255, 255, 255, 0.489);
     backdrop-filter: invert(5%);
-    margin: 10% auto 0 auto;
+    margin: 10% auto 10% auto;
     border: #fff 1px solid;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
@@ -316,7 +353,6 @@ nav ul li a:hover {
 .portfolio_block {
     background-color: transparent;
     width: 100vw;
-    height: 100vh;
     padding: 30px 0;
 }
 .portfolio_block a{
